# n-agent-core

./: .eslintrc.js  .gitignore  README.md  README_EN.md  deploy.ps1  oauth-callback.html  package.json  pnpm-lock.yaml  ses-policy.json  test-email.txt  test-google-login.html  test-whatsapp-bot.ps1  tsconfig.base.json  turbo.json
.github/: copilot-instructions.md
.promtps_iniciais/: proposta_inicial.md  proposta_técnica.md
agent/: .bedrock_agentcore.yaml  .env  main.py  pyproject.toml  test_gemini.py  test_router_local.py
agent/.bedrock_agentcore/nagent/: dependencies.hash
agent/scripts/: setup_memory.py
agent/src/: __init__.py  main.py
agent/src/memory/: __init__.py  agentcore_memory.py
agent/src/router/: __init__.py  agent_router.py
agent/tests/: test_main.py  test_memory.py  test_router.py
docs/: AGENTCORE_PRIMITIVES.md  AWS_TOOLKIT_GUIA.md  BOAS_PRATICAS_AMBIENTES.md  CI_CD_SETUP.md  COGNITO_OAUTH_SETUP.md  COST_ANALYSIS.md  DEPLOY_GUIDE.md  DEVELOPMENT_TOOLS_SETUP.md  LAMBDA_DEVELOPMENT_WORKFLOW.md  MEMORY_OPTIONS.md  PIPELINES_SETUP_COMPLETO.md  PIPELINE_OPTIMIZATION.md  QUICKSTART_CREDENTIALS.md  RESPOSTAS_DUVIDAS.md  SETUP_CREDENTIALS.md  SNYK_SETUP_GUIA.md  TERRAFORM_SETUP.md  TESTES_AUTENTICACAO.md  WHATSAPP_TESTING.md
events/: create-trip.json  health-check.json  whatsapp-menu-request.json  whatsapp-message.json  whatsapp-text-message.json  whatsapp-trip-intent.json  whatsapp-webhook-verify.json
infra/: README.md  sam-local-template.yaml  setup-backend.ps1  setup-backend.sh
promtps/: proposta_inicial.md  proposta_técnica.md
(+146 files in other folders)
