[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=1.1.2",
    "bedrock-agentcore-starter-toolkit>=0.2.5",
    "boto3>=1.42.17",
    "jinja2>=3.1.6",
    "strands-agents>=1.20.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
